Perkin-UAT/force-app/main/default/objects/Employee__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Employee End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>