Perkin-UAT/force-app/main/default/objects/Employee__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Hopkinton</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Shelton</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Waltham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>