Perkin-UAT/force-app/main/default/objects/Employee__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>