Perkin-UAT/force-app/main/default/objects/Employee__c/fields/Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designation__c</fullName>
    <label>Professional Designation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>