Perkin-UAT/force-app/main/default/objects/Employee__c/fields/SFDC_User__c.field-meta.xml
<CustomField>
    <fullName>SFDC_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC User</label>
    <type>Checkbox</type>
</CustomField>