Perkin-UAT/force-app/main/default/objects/Employee__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Employee Start Date</description>
    <inlineHelpText>Employee Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>