Perkin-UAT/force-app/main/default/objects/Employee__c/recordTypes/Non_Officer.recordType-meta.xml
<RecordType>
    <fullName>Non_Officer</fullName>
    <active>true</active>
    <description>PKI Employees: Non Officer Type Contacts</description>
    <label>Non Officer</label>
</RecordType>