Perkin-UAT/force-app/main/default/objects/Employee__c/recordTypes/Officer.recordType-meta.xml
<RecordType>
    <fullName>Officer</fullName>
    <active>true</active>
    <description>PKI Employees: Officer Type Contacts</description>
    <label>Officer</label>
</RecordType>