Perkin-UAT/force-app/main/default/objects/Employee__c/recordTypes/Project_Farma.recordType-meta.xml
<RecordType>
    <fullName>Project_Farma</fullName>
    <active>true</active>
    <label>Project Farma</label>
</RecordType>