Perkin-UAT/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Phone__c</columns>
    <columns>Fax__c</columns>
    <columns>Email__c</columns>
    <columns>Officer__c</columns>
    <columns>Office_Location__c</columns>
    <columns>SFDC_Login__c</columns>
    <columns>SFDC_User__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>